@@ -155,9 +155,9 @@ public class NettyAttrManager {
                     return ip;
                 }
 
-                return ipv4Result.get(ipv4Result.size() - 1);
+                return ipv4Result.getLast();
             } else if (!ipv6Result.isEmpty()) {
-                return ipv6Result.get(0);
+                return ipv6Result.getFirst();
             }
             //If failed to find,fall back to localhost
             final InetAddress localHost = InetAddress.getLocalHost();
